# nspeech

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: audio.rs  gui.rs  main.rs  transcription.rs
