[package]
name = "nstt"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { version = "0.9.7", package = "gtk4", features = ["v4_18"] }
glib = { version = "0.20.12" }
gio = { version = "0.20.12" }
gtk4-layer-shell = "0.5.0"
serde = "1.0.219"
serde_json = "1.0.140"
dirs = "6.0.0"
socket2 = "0.6.0"
