[package]
name = "nspeech"
version = "0.1.0"
edition = "2021"
include = ["data/**/*", "src/**/*", "Cargo.toml", "assets/**/*"]

[dependencies]
# GUI
gtk4 = "0.10.0"
gdk-pixbuf = "0.21.0"
gtk4-layer-shell = "0.6.3"
glib = "0.18.0"
gdk4 = "0.10.0"

# Audio & STT
cpal = "0.15.3"
hound = "3.5.1"
rubato = "0.15"
transcribe-rs = "0.1.4"
vad-rs = { git = "https://github.com/cjpais/vad-rs", default-features = false }
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
once_cell = "1.19.0"
anyhow = "1.0.86"
log = "0.4.22"
env_logger = "0.11.5"
chrono = "0.4.38"
url = "2.5.2"
reqwest = { version = "0.12.5", features = ["json", "stream"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
futures = "0.3.30"

# Utils
dirs = "5.0"
walkdir = "2.5.0"
uuid = { version = "1.8.0", features = ["v4"] }

# --- Optimisations ---

# Optimisation pour le mode "release" (production)
[profile.release]
lto = true        # Link Time Optimization : Réduit la taille et augmente la vitesse (plus long à compiler)
codegen-units = 1 # Meilleure optimisation globale au prix d'une compilation plus lente
strip = true      # Retire les symboles de debug pour réduire la taille du binaire

# Optimisation des dépendances même en mode debug
# Cela permet à l'appli d'être réactive sans devoir tout recompiler en release à chaque fois
[profile.dev.package."*"]
opt-level = 3
